Fixed: header overlapping main components

--- a/src/styles/pages/creator.css
+++ b/src/styles/pages/creator.css
@@ -5,7 +5,7 @@
    ================================================================ */
 
 .page--creator {
-
+  padding-top: var(--layout-header-height);
   display: flex;
   flex-direction: column;
   min-height: calc(100vh - 5rem);
